<resources>
    <string name="app_name">Mediocre Plan</string>

    <string name="navi_discover">Discover</string>
    <string name="navi_plan">Plan</string>
    <string name="navi_contribute">Contribute</string>
    <string name="navi_send_email">Send Email</string>
    <string name="navi_title_intro">Why we made this app</string>
    <string name="title_intro">Why Mediocre?</string>
    <string name="title_send_email_intent">Send Email…</string>
    <string name="title_share_task">Share Task…</string>

    <string name="action_start_now">Start Now</string>
    <string name="action_restart">Restart</string>
    <string name="hint_in_progress">In Progress</string>
    <string name="hint_finished">Finished</string>
    <string name="action_add_to_plan">Add to Plan</string>
    <string name="action_remove_from_plan">Remove from Plan</string>
    <string name="action_abolish">Abolish</string>

    <string name="section_title_in_progress">In Progress</string>
    <string name="section_title_planned">Planned</string>
    <string name="section_title_finished">Finished</string>
    <string name="section_placeholder_in_progress">No Task In Progress. </string>
    <string name="section_placeholder_planned">No Task Planned. </string>
    <string name="section_placeholder_finished">No Task Finished. </string>

    <plurals name="year_for_period">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>

    <plurals name="month_for_period">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

    <plurals name="week_for_period">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>

    <plurals name="day_for_period">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <string name="desc_popularity">Popularity: %d</string>
    <string name="desc_contributor">Contributor: %s</string>

    <string name="period_done">%d%%</string>
    <string name="period_left">%s left</string>
    <string name="period_left_finished">Finished</string>

    <string name="transition_card">transition-card</string>
    <string name="transition_title">transition-title</string>
    <string name="transition_narration">transition-narration</string>
    <string name="transition_properties">transition-properties</string>
</resources>
