<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#57000000"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:padding="4dp"
    tools:context=".ui.TaskDetailActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:transitionName="@string/transition_card"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/task_item_selected_elevation">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/card_button_margin">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAppearance="@style/Task.TextAppearance.Title"
                android:transitionName="@string/transition_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Set up a scholarship. " />

            <TextView
                android:id="@+id/text_narration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textAppearance="@style/Task.TextAppearance.Description"
                android:transitionName="@string/transition_narration"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                tools:text="Blah blah blah blah blah blah blah blah blah blah blah blah blah blah" />

            <LinearLayout
                android:id="@+id/linear_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:orientation="vertical"
                android:transitionName="@string/transition_properties"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_narration">

                <TextView
                    android:id="@+id/text_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/card_drawable_padding"
                    android:drawableStart="@drawable/ic_period_16dp"
                    android:drawableTint="@android:color/white"
                    android:textAppearance="@style/Task.TextAppearance.Description"
                    tools:text="1 week" />

                <TextView
                    android:id="@+id/text_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/card_drawable_padding"
                    android:drawableStart="@drawable/ic_popularity_16dp"
                    android:drawableTint="@android:color/white"
                    android:textAppearance="@style/Task.TextAppearance.Description"
                    tools:text="Popularity: 24" />

                <TextView
                    android:id="@+id/text_contributor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/card_drawable_padding"
                    android:drawableStart="@drawable/ic_contributor_16dp"
                    android:drawableTint="@android:color/white"
                    android:textAppearance="@style/Task.TextAppearance.Description"
                    tools:text="Contributor: Race" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/progress_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/linear_details">

                <ProgressBar
                    android:id="@+id/progress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:minHeight="16dp"
                    android:progressTint="@color/redTaskText"
                    android:progressBackgroundTint="@color/redTaskText"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_bar"
                    tools:progress="25" />

                <TextView
                    android:id="@+id/text_progress_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/progress"
                    android:textAppearance="@style/Task.TextAppearance.Description"
                    tools:text="25%" />

                <TextView
                    android:id="@+id/text_progress_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/progress"
                    android:textAppearance="@style/Task.TextAppearance.Description"
                    tools:text="3 days left" />

            </RelativeLayout>

            <Button
                android:id="@+id/button_start_now"
                style="@style/Task.Button.Positive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_button_margin"
                android:layout_marginStart="@dimen/card_button_margin"
                android:layout_marginTop="16dp"
                android:stateListAnimator="@animator/elevation_task_button"
                android:text="@string/action_start_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_layout" />

            <Button
                android:id="@+id/button_add_to_plan"
                style="@style/Task.Button.Positive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_button_margin"
                android:layout_marginStart="@dimen/card_button_margin"
                android:layout_marginTop="8dp"
                android:stateListAnimator="@animator/elevation_task_button"
                android:text="@string/action_add_to_plan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_start_now" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>